--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@react-native-firebase/app": "^19.0.1",
     "@react-native-firebase/auth": "^19.0.1",
     "@react-native-google-signin/google-signin": "^11.0.0",
+    "@react-native-segmented-control/segmented-control": "^2.4.1",
     "@react-navigation/bottom-tabs": "^6.5.19",
     "@react-navigation/native": "^6.1.16",
     "@react-navigation/stack": "^6.3.28",
+    "axios": "^1.6.1",
     "expo": "~50.0.11",
     "expo-dev-client": "~3.3.9",
     "expo-status-bar": "~1.11.1",
